{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 48,
  "lineage": "7802bdf8-37ba-e895-0c32-9b9679d10d84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b468cdae43502af0",
            "arn": "arn:aws:ec2:us-east-1:434600758347:elastic-ip/eipalloc-0b468cdae43502af0",
            "association_id": "eipassoc-093ff5e35ead56cb6",
            "domain": "vpc",
            "id": "eipalloc-0b468cdae43502af0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a956eba1d88ba459",
            "private_dns": "ip-10-0-1-114.ec2.internal",
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-98-94-232-127.compute-1.amazonaws.com",
            "public_ip": "98.94.232.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kowshal-opl-nat-eip-a"
            },
            "tags_all": {
              "Name": "kowshal-opl-nat-eip-a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da3aa721dadd5a23",
            "arn": "arn:aws:ec2:us-east-1:434600758347:elastic-ip/eipalloc-0da3aa721dadd5a23",
            "association_id": "eipassoc-0be16b816882d60d5",
            "domain": "vpc",
            "id": "eipalloc-0da3aa721dadd5a23",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c953393be50425d4",
            "private_dns": "ip-10-0-2-248.ec2.internal",
            "private_ip": "10.0.2.248",
            "public_dns": "ec2-35-174-57-196.compute-1.amazonaws.com",
            "public_ip": "35.174.57.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kowshal-opl-nat-eip-b"
            },
            "tags_all": {
              "Name": "kowshal-opl-nat-eip-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:internet-gateway/igw-0d40e583bc45d7092",
            "id": "igw-0d40e583bc45d7092",
            "owner_id": "434600758347",
            "tags": {
              "Name": "kowshal-opl-igw"
            },
            "tags_all": {
              "Name": "kowshal-opl-igw"
            },
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b468cdae43502af0",
            "association_id": "eipassoc-093ff5e35ead56cb6",
            "connectivity_type": "public",
            "id": "nat-055eef75740d4a625",
            "network_interface_id": "eni-0a956eba1d88ba459",
            "private_ip": "10.0.1.114",
            "public_ip": "98.94.232.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f71b0348c9d2689",
            "tags": {
              "Name": "kowshal-opl-nat-a"
            },
            "tags_all": {
              "Name": "kowshal-opl-nat-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da3aa721dadd5a23",
            "association_id": "eipassoc-0be16b816882d60d5",
            "connectivity_type": "public",
            "id": "nat-0e7d7deeeff5026e8",
            "network_interface_id": "eni-0c953393be50425d4",
            "private_ip": "10.0.2.248",
            "public_ip": "35.174.57.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02002cb0a380cb74e",
            "tags": {
              "Name": "kowshal-opl-nat-b"
            },
            "tags_all": {
              "Name": "kowshal-opl-nat-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_internet_gateway.igw",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b80283989954bbc01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-055eef75740d4a625",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b80283989954bbc0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07e46506cd57849c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e7d7deeeff5026e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e46506cd57849c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_b",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d40e583bc45d7092",
            "id": "r-rtb-000a6334d582307391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000a6334d58230739",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:route-table/rtb-0b80283989954bbc0",
            "id": "rtb-0b80283989954bbc0",
            "owner_id": "434600758347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055eef75740d4a625",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kowshal-opl-rt-private-a"
            },
            "tags_all": {
              "Name": "kowshal-opl-rt-private-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:route-table/rtb-07e46506cd57849c4",
            "id": "rtb-07e46506cd57849c4",
            "owner_id": "434600758347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e7d7deeeff5026e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kowshal-opl-rt-private-b"
            },
            "tags_all": {
              "Name": "kowshal-opl-rt-private-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:route-table/rtb-000a6334d58230739",
            "id": "rtb-000a6334d58230739",
            "owner_id": "434600758347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d40e583bc45d7092",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kowshal-opl-rt-public"
            },
            "tags_all": {
              "Name": "kowshal-opl-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf7a436b262f4679",
            "route_table_id": "rtb-0b80283989954bbc0",
            "subnet_id": "subnet-0047515f7b334b7bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdc3fc77df13146f",
            "route_table_id": "rtb-07e46506cd57849c4",
            "subnet_id": "subnet-03467cbe373dd0d2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f38c3bfc95abdcec",
            "route_table_id": "rtb-000a6334d58230739",
            "subnet_id": "subnet-03f71b0348c9d2689"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c51588a3f23665e",
            "route_table_id": "rtb-000a6334d58230739",
            "subnet_id": "subnet-02002cb0a380cb74e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:security-group/sg-09f20396f70c68f70",
            "description": "ALB ingress 80/443 from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f20396f70c68f70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kowshal-opl-sg-alb",
            "name_prefix": "",
            "owner_id": "434600758347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kowshal-opl-sg-alb",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "kowshal-opl-sg-alb",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:security-group/sg-01ae0cdd3320a71f5",
            "description": "App instances; allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ae0cdd3320a71f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f20396f70c68f70"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kowshal-opl-sg-app",
            "name_prefix": "",
            "owner_id": "434600758347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kowshal-opl-sg-app",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "kowshal-opl-sg-app",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:security-group/sg-0db81ab2ac5968ed8",
            "description": "DB; allow 5432 from App SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db81ab2ac5968ed8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from App SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ae0cdd3320a71f5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kowshal-opl-sg-db",
            "name_prefix": "",
            "owner_id": "434600758347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kowshal-opl-sg-db",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "kowshal-opl-sg-db",
              "Tier": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:subnet/subnet-0047515f7b334b7bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0047515f7b334b7bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "434600758347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kowshal-opl-private-a",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "kowshal-opl-private-a",
              "Tier": "private"
            },
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:subnet/subnet-03467cbe373dd0d2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03467cbe373dd0d2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "434600758347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kowshal-opl-private-b",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "kowshal-opl-private-b",
              "Tier": "private"
            },
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:subnet/subnet-03f71b0348c9d2689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f71b0348c9d2689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "434600758347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kowshal-opl-public-a",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "kowshal-opl-public-a",
              "Tier": "public"
            },
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:subnet/subnet-02002cb0a380cb74e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02002cb0a380cb74e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "434600758347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kowshal-opl-public-b",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "kowshal-opl-public-b",
              "Tier": "public"
            },
            "vpc_id": "vpc-0fdae0ba3d85ecaf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434600758347:vpc/vpc-0fdae0ba3d85ecaf1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011e9d1216172504e",
            "default_route_table_id": "rtb-00061c43ea6e56eb8",
            "default_security_group_id": "sg-0d49d426fa1d69ae0",
            "dhcp_options_id": "dopt-0df9fd86cf06cf315",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdae0ba3d85ecaf1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00061c43ea6e56eb8",
            "owner_id": "434600758347",
            "tags": {
              "Env": "dev",
              "Name": "kowshal-opl-vpc",
              "Owner": "Kowshal",
              "Project": "OshawaLibrary"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "kowshal-opl-vpc",
              "Owner": "Kowshal",
              "Project": "OshawaLibrary"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}